--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,3 +78,8 @@ swiftmailer:
 knp_paginator:
     template:
         pagination: paginator.html.twig
+        
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: AppBundle\Entity\User
