--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,3 +83,9 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: AppBundle\Entity\User
+    
+easy_admin:
+    entities:
+        - AppBundle\Entity\Product
+        - AppBundle\Entity\Comment
+        - AppBundle\Entity\Category
