--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,3 +24,5 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/zamowienie/, role: ROLE_USER }
+        - { path: ^/komentarze/, role: ROLE_USER }
