--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "knplabs/knp-menu-bundle": "dev-master",
         "knplabs/knp-paginator-bundle": "dev-master",
         "fzaninotto/faker": "1.*@stable",
-        "vich/uploader-bundle": "~0.11.0"
+        "vich/uploader-bundle": "~0.11.0",
+        "javiereguiluz/easyadmin-bundle": "~1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
