--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,13 @@ security:
                 csrf_provider: form.csrf_provider
             logout:       true
             anonymous:    true
+            oauth:
+                resource_owners:
+                    facebook: "/connect/login-facebook"
+                login_path:        /login
+                failure_path:      /login
+                oauth_user_provider:
+                    service: app.user.provider
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
