--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "knplabs/knp-paginator-bundle": "dev-master",
         "fzaninotto/faker": "1.*@stable",
         "vich/uploader-bundle": "~0.11.0",
-        "javiereguiluz/easyadmin-bundle": "~1.2"
+        "javiereguiluz/easyadmin-bundle": "~1.2",
+        "hwi/oauth-bundle": "0.4.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
