--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -18,3 +18,6 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    facebook.client.id: 1608736839338912
+    facebook.client.secret: 6238d354342535454546
