--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -147,3 +147,10 @@ easy_admin:
             class: AppBundle\Entity\Orders
             list:
                 title: "Zamówiena"
+                
+stof_doctrine_extensions:
+    default_locale: %locale%
+    orm:
+        default:
+            sluggable: true
+            timestampable: true
