--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,6 +9,9 @@ easy_admin_bundle:
     resource: "@EasyAdminBundle/Controller/"
     type:     annotation
     prefix:   /admin
+    
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
 
 #HWIOAuthBundle routes
 hwi_oauth_login:
