--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "fzaninotto/faker": "1.*@stable",
         "vich/uploader-bundle": "~0.11.0",
         "javiereguiluz/easyadmin-bundle": "~1.2",
-        "hwi/oauth-bundle": "0.4.*@dev"
+        "hwi/oauth-bundle": "0.4.*@dev",
+        "liip/imagine-bundle": "~1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
