--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "vich/uploader-bundle": "~0.11.0",
         "javiereguiluz/easyadmin-bundle": "~1.2",
         "hwi/oauth-bundle": "0.4.*@dev",
-        "liip/imagine-bundle": "~1.2"
+        "liip/imagine-bundle": "~1.2",
+        "friendsofsymfony/jsrouting-bundle": "~1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
