--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -19,5 +19,5 @@ parameters:
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
 
-    facebook.client.id: 1608736839338912
-    facebook.client.secret: 6238d354342535454546
+    facebook.client.id: ~
+    facebook.client.secret: ~
