--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,4 +12,10 @@ services:
     app.user.provider:
         class: AppBundle\Service\FOSUserProvider
         arguments: [@fos_user.user_manager, {facebook: facebookId}]
+        
+    locale_listener:
+        class: AppBundle\EventListener\LocaleListener
+        arguments: ["%kernel.default_locale%"]
+        tags:
+            - { name: kernel.event_subscriber }
             
